sort.basic.comb.AlgCombSort.scala.error
Compilation error:
AlgCombSort: error: ambiguous reference to overloaded definition,
both method combSort in class AlgCombSort of type ()Unit
and  method combSort in class AlgCombSort of type ()Unit
match argument types ()
		combSort();
                ^AlgCombSort:18: error: method combSort is defined twice
  conflicting symbols both originated in file 'plm.runtime5.AlgCombSort'
def combSort() {
    ^