sort.basic.comb.AlgCombSort.scala.code
	def combSort() {
		var gap = getValueCount();
		var swapped=false;
		do {
			if (gap>1) 
				gap = (gap.toDouble / 1.3).toInt;
			swapped = false;
			for (i <- 0 to getValueCount()-gap-1)
				if (!isSmaller(i,i+gap)) {
					swap(i,i+gap);
					swapped =true;
				}	
		} while (gap>1 || swapped);
  }


def combSort() {
	var len = getValueCount();
	var gap = len;
  var swapped = false;

  do {
    swapped = false;
    
		if(gap>1)
    	gap = (gap.toDouble / 1.3).toInt;

    for(i<- 0 to len-gap-1){
      if(isSmaller(i+gap,i)){
        swap(i, i+gap);
        swapped = true;
      }
    }

  } while(gap >= 1 || swapped)

}